--- a/KGGaming/MainWindow.xaml
+++ b/KGGaming/MainWindow.xaml
@@ -52,7 +52,7 @@
             <TextBox x:Name="txtLoginUser" Grid.Column="0" Height="23" TextWrapping="Wrap" Margin="23,0,24,0"/>
             <Label x:Name="lblLoginPassword" Grid.Column="0" Content="Password:" HorizontalAlignment="Left" Margin="18,0,0,0" VerticalAlignment="Top"/>
             <PasswordBox x:Name="passBoxPassword" Grid.Column="0" Height="23" Margin="24,0,24,0"/>
-            <Button x:Name="btnLogin" Grid.Column="0" Height="30" Margin="24,15,24,0" Content="Login"/>
+            <Button x:Name="btnLogin" Grid.Column="0" Height="30" Margin="24,15,24,0" Content="Login" Click="btnLogin_Click"/>
         </StackPanel>
         <!-- __________ -->
         <StackPanel Grid.Column="1">
