--- a/KGGaming/MainMenu.xaml
+++ b/KGGaming/MainMenu.xaml
@@ -1,13 +1,15 @@
-﻿<Page x:Class="KGGaming.MainMenu"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:KGGaming"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="MainMenu">
+﻿<Window x:Class="KGGaming.MainMenu"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:KGGaming"
+        mc:Ignorable="d"
+        Title="Main Menu" Height="645.492" Width="895.082" Background="White" Foreground="Black">
     <Grid>
-        <WebBrowser Name="myBrowser" HorizontalAlignment="Left" Height="300" VerticalAlignment="Top" Width="300"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="1.3*"/>
+        </Grid.ColumnDefinitions>
     </Grid>
-</Page>
+</Window>
