--- a/KGGaming/MainMenu.xaml
+++ b/KGGaming/MainMenu.xaml
@@ -5,11 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KGGaming"
         mc:Ignorable="d"
-        Title="Main Menu" Height="645.492" Width="895.082" Background="White" Foreground="Black">
+        Title="Main Menu" Height="870.492" Width="1542.082" Background="White" Foreground="Black" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="1.3*"/>
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="9*"/>
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
+        <TabControl x:Name="tabControl" Grid.Column="1" HorizontalAlignment="Left" Height="780" VerticalAlignment="Top" Width="867" Margin="0,1,0,0" Grid.Row="1" Grid.RowSpan="4">
+            <TabItem Header="Products" Height="22" VerticalAlignment="Bottom">
+                <Grid Background="#FFE5E5E5">
+                    <Button x:Name="btnItemTest" Content="Test" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="130" Height="80" FontSize="36" Click="btnItemTest_Click"/>
+                    <Button x:Name="btnItemTest2" Content="Test 2" HorizontalAlignment="Left" Margin="145,10,0,0" VerticalAlignment="Top" Width="130" Height="80" FontSize="36" Click="btnItemTest2_Click"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Services">
+                <Grid Background="#FFE5E5E5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="8*"/>
+                        <ColumnDefinition Width="279*"/>
+                    </Grid.ColumnDefinitions>
+                </Grid>
+            </TabItem>
+        </TabControl>
+        <Image x:Name="imgHeader" HorizontalAlignment="Left" Height="61" Source="Images/RegisterHeader.jpg" Stretch="Fill" Grid.RowSpan="2" VerticalAlignment="Top" Width="1536" Grid.ColumnSpan="2"/>
+        <Image x:Name="imgSettings" Source="Images/Settings.png" Grid.Column="1" HorizontalAlignment="Left" Height="40" Margin="818,10,0,0" VerticalAlignment="Top" Width="40" MouseUp="imgSettings_MouseUp"/>
+        <ListView x:Name="cartList" HorizontalAlignment="Left" Height="541" Grid.Row="2" VerticalAlignment="Top" Width="668" FontSize="20" AlternationCount="10000">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Item" Width="480" DisplayMemberBinding="{Binding Item}" />
+                    <GridViewColumn Header="Price" Width="180" DisplayMemberBinding="{Binding Price}" />
+                </GridView>
+            </ListView.View>
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <VirtualizingStackPanel VerticalAlignment="Top"/>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+        </ListView>
     </Grid>
 </Window>
